--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: inter;
+  src: url(assets/fonts/Inter-VariableFont_opsz\,wght.ttf);
+}
+
+*{
+  margin : 0;
+  font-family: inter ;
+}
