Atualizacao de tecnologias

--- a/src/app/components/home-principal/home-principal.component.html
+++ b/src/app/components/home-principal/home-principal.component.html
@@ -1,4 +1,4 @@
-<body>    
+<body>
     <header>
         <nav id="nav-bar">
             <div id="header-logo">
@@ -6,9 +6,9 @@
             </div>
             <div id="header-a">
                 <ul>
-                    <li class="nav-item"><a href="#" class="nav-link">Menu</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Serviços</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Sobre nós</a></li>
+                    <li class="nav-item"><a href="**" class="nav-link">Menu</a></li>
+                    <li class="nav-item"><a href="**" class="nav-link">Serviços</a></li>
+                    <li class="nav-item"><a href="**" class="nav-link">Sobre nós</a></li>
                 </ul>
             </div>
             <div id="header-button">
@@ -21,7 +21,7 @@
         <div id="main-content">
             <div id="main-text">
                 <h1>
-                    <p>Pequenos conflitos grandes soluções.</p> 
+                    <p>Pequenos conflitos grandes soluções.</p>
                 </h1>
             </div>
             <div id="main-text2">
@@ -31,7 +31,7 @@
                         para que pequenos
                     </p>
                     <P>
-                        problemas não se tornem grandes complicações.   
+                        problemas não se tornem grandes complicações.
                     </P>
                 </h5>
             </div>
