--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,16 +6,14 @@
 body{
   background-color: #131B2B;
 }
+button{
+  cursor: pointer;
+}
 #nav-bar{
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1.2rem 1.8rem;
-}
-#header-logo{
-  /* display: flex;
-  align-items: center;
-   */
 }
 #header-a{
   display:flex;
@@ -27,8 +25,20 @@ body{
   list-style: none;
 }
 .nav-item{
-  margin: 0 15px
+  margin: 0 15px;
+  border-radius:10px;
+  transition: ease all 0.5s;
+  background-color: transparent;
+  padding: 10px;
 }
+.nav-item:hover{
+  background-color: #e9e9d0;
+  color: black;
+}
+.nav-item a:hover{
+  color: black;
+}
+
 .nav-link{
   text-decoration: none;
   font-size: 1.1rem;
@@ -75,6 +85,10 @@ main{
   border-radius: 20px;
   width: 220px;
   height: 30px;
+  transition: ease all 0.5s;
+}
+#main-button button:hover{
+  background-color: #ffffff88;
 }
 #main-button button p{
   font-size: 19px;
