--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
               </h5>
           </div>
           <div id="main-button">
-              <button><p>Agendar mediação</p></button>
+              <button><p>Agendar Mediação</p></button>
           </div>
       </div>
           <figure>
