Criacao das telas de login e cadastro

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,10 @@
-*{
+/* *{
   box-sizing: border-box;
   margin: 0;
   text-decoration: none;
 }
 body{
   background-color: #131B2B;
-}
-button{
-  cursor: pointer;
 }
 #nav-bar{
   display: flex;
@@ -98,4 +95,4 @@ main{
   position: fixed;
   left: 60%;
   top: 10%;
-}
+} */
