--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<body>
+<!-- <body>
   <header>
       <nav id="nav-bar">
           <div id="header-logo">
@@ -6,8 +6,8 @@
           </div>
           <div id="header-a">
               <ul>
-                  <li class="nav-item"><a href="#" class="nav-link">Menu</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link">Serviços</a></li>
+                  <li class="nav-item"><a routerLink="teladecadastro" class="nav-link">Menu</a></li>
+                  <li class="nav-item"><a href="" class="nav-link">Serviços</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">Sobre nós</a></li>
               </ul>
           </div>
@@ -45,3 +45,5 @@
   </main>
   <footer></footer>
 </body>
+ -->
+<router-outlet><router-outlet/>
