--- a/src/app/components/home-principal/home-principal.component.html
+++ b/src/app/components/home-principal/home-principal.component.html
@@ -6,9 +6,9 @@
             </div>
             <div id="header-a">
                 <ul>
-                    <li class="nav-item"><a href="**" class="nav-link">Menu</a></li>
-                    <li class="nav-item"><a href="**" class="nav-link">Serviços</a></li>
-                    <li class="nav-item"><a href="**" class="nav-link">Sobre nós</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Menu</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Serviços</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Sobre nós</a></li>
                 </ul>
             </div>
             <div id="header-button">
