--- a/src/app/components/home-principal/home-principal.component.html
+++ b/src/app/components/home-principal/home-principal.component.html
@@ -8,7 +8,7 @@
               <ul>
                   <li class="nav-item"><a routerLink="/login" class="nav-link">Menu</a></li>
                   <li class="nav-item"><a routerLink="/login" class="nav-link">Serviços</a></li>
-                  <li class="nav-item"><a routerLink="" class="nav-link">Sobre nós</a></li>
+                  <li class="nav-item"><a routerLink="/sobre nos" class="nav-link">Sobre nós</a></li>
               </ul>
           </div>
           <div id="header-button">
