--- a/src/app/components/teladecadastro/teladecadastro.component.html
+++ b/src/app/components/teladecadastro/teladecadastro.component.html
@@ -26,6 +26,8 @@
         <label for="nascimento">Qual a Sua Data de Nascimento ?</label>
         <input id="nascimento" type="date"/>
 
+        <p>Escolheu a Conta Errada ? <u (click)="backtochoose()">Clique Aqui</u></p>
+
         <button class="final-btn">Criar Minha Conta</button>
       </div>
 
@@ -41,6 +43,8 @@
 
         <label for="nascimento">Qual a Sua Data de Nascimento ?</label>
         <input id="nascimento" type="date"/>
+
+        <p>Escolheu a Conta Errada ? <u (click)="backtochoose()">Clique Aqui</u></p>
 
         <button class="final-btn">Criar Minha Conta</button>
       </div>
