--- a/src/app/components/teladeandamento/teladeandamento.component.html
+++ b/src/app/components/teladeandamento/teladeandamento.component.html
@@ -7,7 +7,7 @@
     <main>
         <img src="/assets/Images/undo_15093184.png" alt="" width="35px">
         <h1>Andamento do processo</h1>
-        <div id="div-progress-bar">
+        <div id="container-progress-bar">
             <div id="progress-bar">
                 <div id="circle1">asdf</div>
                 <div id="circle2">asdf</div>
@@ -15,11 +15,16 @@
             </div>
         </div>
         <a href="">+ Processos</a>
-        <label id="aks" for="">
-            <textarea name="" id="">
-                Resumo:
-            </textarea>
-            <div id="desc-med"><img src="/assets/Images/account_2040484.png" alt="asdfasfd" width="20px" style="background-color: white ; ;"><p style="color: white;background-color: blue; height: 180px; width: 250px;"> asldfkjaslfkjlkjsaldkjaslkjflsajfdla</p></div>
+        <label id="container-general-info-preview" for="">
+                <textarea name="" id="info-preview">
+                    Resumo:
+                </textarea>
+                <div id="desc-med">
+                    <img id="image-med" src="/assets/Images/account_2040484.png" alt="asdfasfd">
+                </div>
+                <div id="text-med">
+                    <p style="color: white;">text</p>
+                </div>
         </label>
     </main>
 </section>
