adicao da aba de abertura dos processos

--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -14,7 +14,7 @@
       <h1 style="margin: 30px;">Bem - Vindo : Usuario</h1>
       <div class="btns-container"> <!-- essa div guarda os botões iniciais-->
         <div id="content-box">
-          <div class="btns">
+          <div routerLink="/agendar" class="btns">
             <img src="assets/icons/meeting_4029413.png" width="70px"><p>Agendar Uma Reunião</p>
           </div>
           <div class="btns">
