--- a/src/app/components/header-log/header-log.component.html
+++ b/src/app/components/header-log/header-log.component.html
@@ -2,7 +2,7 @@
   <img src="assets/Images/Prancheta 1.png" alt="" width="250px">
 
   <div id="content">
-    <img style="margin-top: 5px;cursor: pointer;" src="assets/icons/sinobranco.png" width="40px" height="40px">
+    <img routerLink="/noti" style="margin-top: 5px;cursor: pointer;" src="assets/icons/sinobranco.png" width="40px" height="40px">
 
     <div id="user-content">
       <p>Usuario</p>
