Semi Finalização página andamento

--- a/src/app/components/teladeandamento/teladeandamento.component.html
+++ b/src/app/components/teladeandamento/teladeandamento.component.html
@@ -1,30 +1,48 @@
+<app-header-log></app-header-log>
 <section>
-    <header>
-        <nav>
-            <img src="/assets/Images/Prancheta 1.png" alt="return" width="200px"> <img src="/assets/Images/account_2040484.png" alt="asdfasf" height="50px">
-        </nav>
-    </header>
     <main>
-        <img src="/assets/Images/undo_15093184.png" alt="" width="35px">
-        <h1>Andamento do processo</h1>
-        <div id="container-progress-bar">
+
+        <h1 style="text-align: center; text-transform: uppercase; padding: 30px; ">Andamento dos casos</h1> <br>
+
+        <div id="container-progress">
+            <div #teste id="progress-on"></div>
             <div id="progress-bar">
-                <div id="circle1">asdf</div>
-                <div id="circle2">asdf</div>
-                <div id="circle3">asdfas</div>
+
+                <div class="circle">
+                    <div class="other-circle">
+                        <p>1</p>
+                    </div>
+                    <p>Caso aberto</p>
+                </div>
+
+                <div class="circle">
+                    <div class="other-circle">
+                        <p>2</p>
+                    </div>
+                    <p>Caso em análise</p>
+                </div>
+
+                <div class="circle">
+                    <div class="other-circle">
+                        <p>3</p>
+                    </div>
+                    <p>Caso finalizado</p>
+                </div>
+
             </div>
         </div>
-        <a href="">+ Processos</a>
-        <label id="container-general-info-preview" for="">
-                <textarea name="" id="info-preview">
-                    Resumo:
-                </textarea>
-                <div id="desc-med">
-                    <img id="image-med" src="/assets/Images/account_2040484.png" alt="asdfasfd">
-                </div>
-                <div id="text-med">
-                    <p style="color: white;">text</p>
-                </div>
-        </label>
+
+
+        <!-- FAZER DEPOIS - BACK  -->
+
+        <!-- <div id="more">
+            <a href="#">+ Processos</a>
+        </div>
+        <div id="infos">
+            <textarea name="" id="">
+            </textarea>
+            <div id="info-med">textsadfjasfjsafasdfaasfasa</div>
+        </div> -->
     </main>
+
 </section>
