--- a/src/app/components/teladeandamento/teladeandamento.component.css
+++ b/src/app/components/teladeandamento/teladeandamento.component.css
@@ -1,108 +1,58 @@
 section{
-    background-color: #e9e9d0;
-    height: 100vh;
+    background-color: #E9E9D0;
+    min-height: 100vh;
 }
-nav{
-    background-color:#131B2B;
-    display:flex;
-    justify-content: space-between;
-    padding: 1.2rem 1.8rem ;
-    
-}
-main img{
-    display:flex;
-    padding-left: 20px;
-}
-main h1{
-    display:flex;
-    justify-content: center;
-    font-size: 35px;
-    font-weight: unset;
-    text-transform: uppercase;
-}
-#container-progress-bar{
-    background-color: transparent;
+#container-progress{
+    background-color: white;
+    border-radius: 50px;
+    margin: auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding: 100px 0 100px;
+    height: 20px;
+    width: 80%;
+    gap: 40px;
+}
+#progress-on{
+    background-color: #131B2B;
+    position: absolute;
+    border-radius: 50px;
+    height: 18px;   
+    width: 0%;
 }
 #progress-bar{
-    background-color: white;
-    display:flex;
-    justify-content: space-around;
-    width: 1250px;
-    height: 20px;
-}
-#circle1{
-    background-color: blue;
-    display:flex;
-    justify-content: center;
-    height: 30px;
-    width: 30px;
-    
-}
-#circle2{
-    background-color: blue;
-    display:flex;
-    justify-content: center;
-    height: 30px;
-    width: 30px;
-}
-#circle3{
-    background-color: blue;
-    height: 30px;
-    width: 30px;
-}
-main a{
-    display:flex;
-    justify-content:center;
-    padding-bottom: 20px;
-    text-decoration:none;
-    color: black;
-    font-weight: bold;
-}
-#container-general-info-preview{
-    background-color: black;
     display: flex;
-    justify-content: center;
     width: 100%;
-    height: 150px;
+    justify-content: space-around;
 }
-#container-info-preview{
+
+ .circle{
+    display: flex;
+    position: relative;
+    bottom: -20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+ }
+.other-circle{
+    background-color: #131B2B;
+    color: #A5755B;
     display: flex;
     justify-content: center;
-    height: 100%;
-    width: 400px;
-}
-#info-preview{
-    position: relative;
-    left: -5px;
-}
-#desc-med{
-    background-color: blue;
-    display: flex;
-    position: relative;
-    left: 5px;
-    height: 100%;
-    width: 200px;
-}
-#image-med{
-    position: relative;
-    top: 3px;
-    right: 19px;
-    height: 40px;
+    align-items: center;
+    border-radius: 100%;
     width: 40px;
+    height: 40px;
+    font-size: 1.5rem;
 }
-#text-med{
+#more{
+    padding-bottom: 20px;
+}
+#infos{
     display: flex;
-    justify-content: start;
-    position: relative;
-    overflow: hidden;
-    left: -151px;
-    height: 100%;
-    width: 156px;
-}
-#text-med p{
-    word-wrap: break-word;
-    white-space: normal;
+    justify-content: center;
+    position: fixed;
+    left: 470px;
+    gap: 20px;
 }
