--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -14,7 +14,8 @@
       <h1 style="margin: 30px;">Bem - Vindo : Usuario</h1>
       <div class="btns-container"> <!-- essa div guarda os botões iniciais-->
         <div id="content-box">
-          <div routerLink="/agendar" class="btns">
+          <div routerLink="/agendar
+          " class="btns">
             <img src="assets/icons/meeting_4029413.png" width="70px"><p>Agendar Uma Reunião</p>
           </div>
           <div class="btns">
@@ -48,9 +49,6 @@
   </div><!-- Fim da div First-->
 
   <div id="ot">
-    <!-- <figure>
-      <img src="assets/Images/cka.avif" width="100%" height="500px">
-    </figure> -->
 
     <h1 style="padding-top: 100px;padding-left: 100px;">Como Funciona o Sistema de processo ?</h1><br>
 
