Adicao de uma secao extra na home principal e remocao dela na pagina do usuario logado

--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -14,8 +14,7 @@
       <h1 style="margin: 30px;">Bem - Vindo : Usuario</h1>
       <div class="btns-container"> <!-- essa div guarda os botões iniciais-->
         <div id="content-box">
-          <div routerLink="/agendar
-          " class="btns">
+          <div routerLink="/agendar" class="btns">
             <img src="assets/icons/meeting_4029413.png" width="70px"><p>Agendar Uma Reunião</p>
           </div>
           <div class="btns">
@@ -47,48 +46,6 @@
     </div><!-- Fim da div second-->
     <!-- Fim da div First-->
   </div><!-- Fim da div First-->
-
-  <div id="ot">
-
-    <h1 style="padding-top: 100px;padding-left: 100px;">Como Funciona o Sistema de processo ?</h1><br>
-
-    <div id="ic">
-
-      <div class="kc">
-        <img  src="assets/icons/others/notification_1585205.png" width="90px" alt="">
-        <h3>Você Envia Seu Processo</h3>
-        <p>Você pode iniciar um processo preenchendo todos os dados necessários e enviar para análise,
-          assim você ja estará com 1 processo aberto
-        </p>
-      </div>
-      <div class="kc">
-        <img  src="assets/icons/others/financial-information_8467548.png" width="90px" alt="">
-        <h3>Seu Processo Será analisado por um Profissional</h3>
-        <p>Quando seu processo estiver aberto, ele será enviado aleatoriamente para um
-          profissional para ser analisado
-        </p>
-      </div>
-      <div class="kc">
-        <img  src="assets/icons/others/video-call_3321497.png" width="90px" alt="">
-        <h3>O Mediador irá Contata-lo</h3>
-        <p>Depois que seu processo for analisado o mediador que é o profissional que analisou
-          seu caso irá entrar em contato com você caso seu processo seja válido, e irá organizar uma reunião
-        </p>
-      </div>
-      <div class="kc">
-        <img  src="assets/icons/others/11161378.png" alt="" width="90px">
-        <h3>Será Obtido um veredito final para ambas as Partes</h3>
-        <p>Depois de realizar a reunião com ambas as partes, seu mediador irá tomar uma decisão com base na lei,
-          em relação ao que foi pedido no processo e o que foi discutido em reunião
-        </p>
-      </div>
-
-    </div><!--fim da div ic-->
-    <div id="ou">
-      <button id="pbtn">Desejo Abrir Um Processo</button>
-    </div>
-
-  </div><!--fim da div OT-->
 
 
 </section>
