--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -20,7 +20,7 @@
           <div class="btns">
             <img src="assets/icons/message_4129700.png" width="70px"><p>Mensagens</p>
           </div>
-          <div class="btns">
+          <div class="btns" routerLink="/andamento">
             <img src="assets/icons/hourglass_4992427.png" width="70px"><p>Andamento de Processos</p>
           </div>
           <div class="btns">
@@ -28,17 +28,15 @@
           </div>
 
           <div class="btns">
-            <img src="assets/icons/meeting_4029413.png" width="70px"><p>Agendar Uma Reunião</p>
+            <img src="" width="70px"><p>Chat Com Inteligência Artificial</p>
           </div>
           <div class="btns">
-            <img src="assets/icons/message_4129700.png" width="70px"><p>Mensagens</p>
+            <img src="" width="70px"><p>Preciso De Ajuda</p>
           </div>
           <div class="btns">
-            <img src="assets/icons/hourglass_4992427.png" width="70px"><p>Andamento de Processos</p>
+            <img src="" width="70px"><p>Reportar Algo</p>
           </div>
-          <div class="btns">
-            <img src="assets/icons/text_2878671.png" width="70px"><p>Histórico de Processos</p>
-          </div>
+
         </div>
 
       </div>
