--- a/src/app/pagina/teladeandamento/teladeandamento.component.html
+++ b/src/app/pagina/teladeandamento/teladeandamento.component.html
@@ -1,5 +1,9 @@
 <app-header-log></app-header-log>
 <section>
+  <div id="butn">
+    <img routerLink="/home-log" src="assets/icons/undo_15093184.png" width="40px">
+    <b routerLink="/home-log">Voltar</b>
+  </div>
     <main>
 
         <h1 style="text-align: center; text-transform: uppercase; padding: 30px; ">Andamento dos casos</h1> <br>
