--- a/src/app/components/home-principal/home-principal.component.html
+++ b/src/app/components/home-principal/home-principal.component.html
@@ -36,7 +36,8 @@
               </h5>
           </div>
           <div id="main-button">
-              <button routerLink="/login"><p>Agendar Mediação</p></button>
+              <button routerLink="/login"><p>Agendar Mediação</p></button><p style="color: white;padding: 6px;">Ou</p>
+              <button routerLink="/login"><p>Eu Sou Mediador</p></button>
           </div>
       </div>
           <figure>
