--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -1,6 +1,6 @@
 
 <app-header-log/>
-<section>
+<section id="fir">
 
   <div id="first"> <!-- essa div é pra colocar as imagens de fundo que são 2-->
 
@@ -11,7 +11,7 @@
 
     <div id="second"> <!-- essa div é para a parte do meio em cor normal-->
 
-      <h1 style="margin: 30px;">Bem - Vindo : Usuario</h1>
+      <h1 style="margin: 60px;">Bem - Vindo : Usuario</h1>
       <div class="btns-container"> <!-- essa div guarda os botões iniciais-->
         <div id="content-box">
           <div routerLink="/agendar" class="btns">
