--- a/src/app/components/header-log/header-log.component.css
+++ b/src/app/components/header-log/header-log.component.css
@@ -18,8 +18,51 @@ header{
   align-items: center;
   gap:20px;
   margin-right: 50px;
+  border-radius: 20px;
+  padding: 5px;
+  transition: ease all 0.5s;
+}
+#user-content:hover{
+  background-color:rgba(240, 248, 255, 0.692);
+  cursor: pointer;
 }
 #content{
   display: flex;
   gap: 100px;
+}
+#fo{
+  transition: ease all 0.5s;
+}
+#fo:hover{
+  border-radius: 100%;
+  background-color: rgba(240, 248, 255, 0.692);
+  padding: 6px;
+}
+
+
+
+#dropdown-menu {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  right: 50px; /* Ajuste a posição conforme necessário */
+  top: 70px; /* Ajuste conforme o layout */
+  z-index: 1000;
+}
+
+#dropdown-menu a {
+  text-decoration: none;
+  color: #131B2B;
+  padding: 10px;
+}
+
+#dropdown-menu a:hover {
+  background-color: rgb(117, 171, 218);
+  border-radius: 5px;
+  /* padding: 5px; */
 }
