criacao da pagina historico

--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -23,7 +23,7 @@
           <div class="btns" routerLink="/andamento">
             <img src="assets/icons/hourglass_4992427.png" width="70px"><p>Andamento de Processos</p>
           </div>
-          <div class="btns">
+          <div class="btns" routerLink="/historico" >
             <img src="assets/icons/text_2878671.png" width="70px"><p>Histórico de Processos</p>
           </div>
 
