--- a/src/app/pagina/historico/historico.component.css
+++ b/src/app/pagina/historico/historico.component.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    background-color: #2d3246;
+    background-color: #131B2B;
     padding: 15px 20px;
     width: 100%;
     margin: auto;
@@ -21,7 +21,13 @@ header {
 }
 
 .logo img {
-    height: 3.5rem;
+  width: 100%;
+  height: 11vh;
+  background-color: #131B2B;
+  display: flex;
+  justify-content: space-between;
+  color: aliceblue;
+  align-items: center;
 }
 
 #nav-user {
