--- a/src/app/components/telamensagem/telamensagem.component.html
+++ b/src/app/components/telamensagem/telamensagem.component.html
@@ -1,1 +1,424 @@
-<p>telamensagem works!</p>
+<section>
+    <div id="all-content">
+
+        <div id="left">
+            
+            <div id="groups">
+
+                <div id="label-groups">
+                    <label for="groups"><b>Groups</b></label>
+                </div>
+
+                <div id="contact-group">
+
+                    <div id="contact">
+                        <img src="assets/icons/account_2040484.png" alt="user" height="30px">
+                    </div>
+
+                    <div id="info">
+
+                        <div id="info-separator">
+
+                            <div id="name">
+                                Name of User
+                            </div>
+
+                            <div id="time">
+                                <time datetime="">12:12</time>
+                            </div>
+
+                        </div>
+
+                        <div id="info-separator2">
+                            <div id="msg-ntfy">
+
+                                <div id="msg-ntfy-MSG">
+                                    <h5>msg</h5>
+                                </div>
+
+                                <div id="msg-ntfy-NTFY">
+                                    1
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <hr>
+                    </div>
+
+                </div>
+
+                
+                <div id="contact-group">
+
+                    <div id="contact">
+                        <img src="assets/icons/account_2040484.png" alt="user" height="30px">
+                    </div>
+
+                    <div id="info">
+
+                        <div id="info-separator">
+
+                            <div id="name">
+                                Name of User
+                            </div>
+
+                            <div id="time">
+                                <time datetime="">12:12</time>
+                            </div>
+
+                        </div>
+
+                        <div id="info-separator2">
+                            <div id="msg-ntfy">
+
+                                <div id="msg-ntfy-MSG">
+                                    <h5>msg</h5>
+                                </div>
+
+                                <div id="msg-ntfy-NTFY">
+                                    1
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <hr>
+                    </div>
+
+                </div>
+
+
+                <div id="contact-group">
+
+                    <div id="contact">
+                        <img src="assets/icons/account_2040484.png" alt="user" height="30px">
+                    </div>
+
+                    <div id="info">
+
+                        <div id="info-separator">
+
+                            <div id="name">
+                                Name of User
+                            </div>
+
+                            <div id="time">
+                                <time datetime="">12:12</time>
+                            </div>
+
+                        </div>
+
+                        <div id="info-separator2">
+                            <div id="msg-ntfy">
+
+                                <div id="msg-ntfy-MSG">
+                                    <h5>msg</h5>
+                                </div>
+
+                                <div id="msg-ntfy-NTFY">
+                                    1
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <hr>
+                    </div>
+
+                </div>
+                
+
+            </div>
+
+            <div id="people">
+
+                <div id="label-people">
+                    <label for="people"><b>People</b></label>
+                </div>
+
+                <div id="contact-people">
+
+                    <div id="contact">
+                        <img src="assets/icons/account_2040484.png" alt="user" height="30px">
+                    </div>
+
+                    <div id="info">
+
+                        <div id="info-separator">
+
+                            <div id="name">
+                                Name of User
+                            </div>
+
+                            <div id="time">
+                                <time datetime="">12:12</time>
+                            </div>
+
+                        </div>
+
+                        <div id="info-separator2">
+                            <div id="msg-ntfy">
+
+                                <div id="msg-ntfy-MSG">
+                                    <h5>msg</h5>
+                                </div>
+
+                                <div id="msg-ntfy-NTFY">
+                                    1
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <hr>
+                    </div>
+
+                </div>
+
+                
+                <div id="contact-people">
+
+                    <div id="contact">
+                        <img src="assets/icons/account_2040484.png" alt="user" height="30px">
+                    </div>
+
+                    <div id="info">
+
+                        <div id="info-separator">
+
+                            <div id="name">
+                                Name of User
+                            </div>
+
+                            <div id="time">
+                                <time datetime="">12:12</time>
+                            </div>
+
+                        </div>
+
+                        <div id="info-separator2">
+                            <div id="msg-ntfy">
+
+                                <div id="msg-ntfy-MSG">
+                                    <h5>msg</h5>
+                                </div>
+
+                                <div id="msg-ntfy-NTFY">
+                                    1
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <hr>
+                    </div>
+
+                </div>
+
+
+                <div id="contact-people">
+
+                    <div id="contact">
+                        <img src="assets/icons/account_2040484.png" alt="user" height="30px">
+                    </div>
+
+                    <div id="info">
+
+                        <div id="info-separator">
+
+                            <div id="name">
+                                Name of User
+                            </div>
+
+                            <div id="time">
+                                <time datetime="">12:12</time>
+                            </div>
+
+                        </div>
+
+                        <div id="info-separator2">
+                            <div id="msg-ntfy">
+
+                                <div id="msg-ntfy-MSG">
+                                    <h5>msg</h5>
+                                </div>
+
+                                <div id="msg-ntfy-NTFY">
+                                    1
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <hr>
+                    </div>
+
+                </div>
+
+                <div id="contact-people">
+
+                    <div id="contact">
+                        <img src="assets/icons/account_2040484.png" alt="user" height="30px">
+                    </div>
+
+                    <div id="info">
+
+                        <div id="info-separator">
+
+                            <div id="name">
+                                Name of User
+                            </div>
+
+                            <div id="time">
+                                <time datetime="">12:12</time>
+                            </div>
+
+                        </div>
+
+                        <div id="info-separator2">
+                            <div id="msg-ntfy">
+
+                                <div id="msg-ntfy-MSG">
+                                    <h5>msg</h5>
+                                </div>
+
+                                <div id="msg-ntfy-NTFY">
+                                    1
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <hr>
+                    </div>
+
+                </div>
+
+                <div id="contact-people">
+
+                    <div id="contact">
+                        <img src="assets/icons/account_2040484.png" alt="user" height="30px">
+                    </div>
+
+                    <div id="info">
+
+                        <div id="info-separator">
+
+                            <div id="name">
+                                Name of User
+                            </div>
+
+                            <div id="time">
+                                <time datetime="">12:12</time>
+                            </div>
+
+                        </div>
+
+                        <div id="info-separator2">
+                            <div id="msg-ntfy">
+
+                                <div id="msg-ntfy-MSG">
+                                    <h5>msg</h5>
+                                </div>
+
+                                <div id="msg-ntfy-NTFY">
+                                    1
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                        <hr>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+        <div id="message">
+            <nav>   
+
+                <div id="separator">
+                    <img src="assets/icons/account_2040484.png" alt="" height="45px">
+
+                    <div id="name-status">
+                        <label for="img">User</label>
+                        <h5>status</h5>
+                    </div>
+
+                </div>
+
+                <div id="separator2">
+                    <a href="#"><img src="assets/icons/telephone.png" alt="Call" height="25px"></a>
+                    <a href="#"><img src="assets/icons/video-camera.png" alt="Camera" height="25px"></a>
+                    <a href="#"><img src="assets/icons/more-information.png" alt="..." height="25px"></a>
+                </div>
+                
+            </nav>
+
+            <main>
+
+                <div id="chatbox">
+
+                        <div id="other-message">
+                            <p>Hi<br><span>12:12</span></p>
+                        </div>
+                        
+                        <div id="my-message">
+                            <p>Hello<br><span>12:12</span></p>
+                        </div>
+        
+                        <div id="other-message">
+                            <p>How are you?<br><span>12:12</span></p>
+                        </div>
+        
+                        <div id="my-message">
+                            <p>I'm fine and you, how are you?<br><span>12:12</span></p>
+                        </div>
+        
+                        <div id="other-message">
+                            <p>I'm doig well, can we meet tomorrow?<br><span>12:12</span></p>
+                        </div>
+        
+                        <div id="my-message">
+                            <p>Yes, sure!<br><span>12:12</span></p>
+                        </div>
+
+                    </div>
+                
+            </main>
+
+            <footer>
+                <div id="footer-area">
+
+                    <div id="text-container">
+
+                        <input type="text" placeholder="Type your mensage here..." style="overflow-wrap: break-word;">
+
+                        <div id="imgs">
+
+                            <div id="annex-container">
+                                <img src="assets/icons/appendix.png" alt="anexo" height="25px">
+                            </div>
+
+                            <div id="emoji-container">
+                                <img src="assets/icons/happy.png" alt="e" height="25px">
+                            </div>
+
+                        </div>
+
+                    </div>
+                    
+                    <div id="button">
+                        <button type="button"><img src="assets/icons/mic.png" alt="" height="35px"></button>
+                    </div>
+
+                </div>
+
+            </footer>
+
+        </div>
+    </div>
+</section>
