Criação da tela de mensagensc-v2

--- a/src/app/components/telamensagem/telamensagem.component.html
+++ b/src/app/components/telamensagem/telamensagem.component.html
@@ -20,7 +20,7 @@
                         <div id="info-separator">
 
                             <div id="name">
-                                Name of User
+                                Name of Group
                             </div>
 
                             <div id="time">
@@ -60,7 +60,7 @@
                         <div id="info-separator">
 
                             <div id="name">
-                                Name of User
+                                Name of Group
                             </div>
 
                             <div id="time">
@@ -100,7 +100,7 @@
                         <div id="info-separator">
 
                             <div id="name">
-                                Name of User
+                                Name of Group
                             </div>
 
                             <div id="time">
