--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -17,7 +17,7 @@
           <div routerLink="/agendar" class="btns">
             <img src="assets/icons/meeting_4029413.png" width="70px"><p>Agendar Uma Reunião</p>
           </div>
-          <div class="btns">
+          <div routerLink="/mensagens" class="btns">
             <img src="assets/icons/message_4129700.png" width="70px"><p>Mensagens</p>
           </div>
           <div class="btns" routerLink="/andamento">
