Mais consertos, alguns pequenos

--- a/src/app/components/telamensagem/telamensagem.component.html
+++ b/src/app/components/telamensagem/telamensagem.component.html
@@ -1,4 +1,8 @@
 <section>
+  <div routerLink="/home-log" id="butn">
+    <img routerLink="/home-log" src="assets/icons/undo_15093184.png" width="40px">
+    <b routerLink="/home-log">Voltar</b>
+  </div>
   <div id="all-content">
 
     <div id="left">
@@ -65,7 +69,7 @@
 
       </nav>
 
-      <main>
+      <main style="overflow: auto;">
 
         <div id="chatbox">
           <div id="other-message">
