--- a/src/app/components/telamensagem/telamensagem.component.css
+++ b/src/app/components/telamensagem/telamensagem.component.css
@@ -9,6 +9,7 @@ section{
   align-items: center;
   gap: 20px;
   padding: 20px;
+  width: 17%;
   cursor: pointer;
   transition: ease all 0.5s;
 }
@@ -116,6 +117,7 @@ hr{
     justify-content: space-between;
     height: 100vh;
     width: 100%;
+
 }
 
 nav{
@@ -170,9 +172,10 @@ nav{
     background-color: transparent;
     height: 70px;
     display: flex;
-    align-items: start;
-    justify-content: start;
-    padding: 0 20px 0 20px;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    /* padding: 0 20px 0 20px; */
 }
 
 #text-container{
@@ -182,6 +185,7 @@ nav{
     border-radius: 10px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 #text-container input{
@@ -195,20 +199,21 @@ nav{
 }
 
 #imgs{
-    position: absolute;
-    left: 370px;
+    /* position: absolute; */
+    /* left: 370px; */
     display: flex;
-    gap: 15px;
+    gap: 20px;
+    margin-right: 30px;
 }
 
 footer #button{
-    position: absolute;
+    /* position: absolute;
     top: 89.5%;
-    left: 93.2%;
+    left: 93.2%; */
 }
 
 #button button{
-    background-color: #131B2B;
+    background-color: #2860d1;
     border-radius: 10px;
     outline: none;
     border: none;
