--- a/src/app/pagina/teladeandamento/teladeandamento.component.html
+++ b/src/app/pagina/teladeandamento/teladeandamento.component.html
@@ -4,49 +4,40 @@
     <img routerLink="/home-log" src="assets/icons/undo_15093184.png" width="40px">
     <b routerLink="/home-log">Voltar</b>
   </div>
-    <main>
+  <main>
 
-        <h1 style="text-align: center; text-transform: uppercase; padding: 30px; ">Andamento dos casos</h1> <br>
+    <h1 style="text-align: center; text-transform: uppercase; padding: 30px; ">Andamento de caso</h1> <br>
 
-        <div id="container-progress">
-            <div #teste id="progress-on"></div>
-            <div id="progress-bar">
+    <div id="container-progress">
+      <div #teste id="progress-on"></div>
+      <div id="progress-bar">
 
-                <div class="circle">
-                    <div class="other-circle">
-                        <p>1</p>
-                    </div>
-                    <p>Caso aberto</p>
-                </div>
-
-                <div class="circle">
-                    <div class="other-circle">
-                        <p>2</p>
-                    </div>
-                    <p>Caso em análise</p>
-                </div>
-
-                <div class="circle">
-                    <div class="other-circle">
-                        <p>3</p>
-                    </div>
-                    <p>Caso finalizado</p>
-                </div>
-
+        <div class="circle">
+            <div class="other-circle">
+                <p>1</p>
             </div>
+            <p>Caso aberto</p>
         </div>
 
-
-        <!-- FAZER DEPOIS - BACK  -->
-
-        <!-- <div id="more">
-            <a href="#">+ Processos</a>
+        <div class="circle">
+            <div class="other-circle">
+                <p>2</p>
+            </div>
+            <p>Caso em análise</p>
         </div>
-        <div id="infos">
-            <textarea name="" id="">
-            </textarea>
-            <div id="info-med">textsadfjasfjsafasdfaasfasa</div>
-        </div> -->
-    </main>
+
+        <div class="circle">
+            <div class="other-circle">
+                <p>3</p>
+            </div>
+            <p>Caso finalizado</p>
+        </div>
+
+      </div>
+    </div>
+
+    <div style="margin-top: 10%;margin-left: 10%;font-size: 1.5rem;">ID do seu processo :</div>
+
+  </main>
 
 </section>
