--- a/src/app/components/telamensagem/telamensagem.component.css
+++ b/src/app/components/telamensagem/telamensagem.component.css
@@ -1,15 +1,21 @@
 
 section{
-    background-color: #3269d6;
-    height: 100%;
+  background-color: #131B2B;
+  overflow: hidden;
+  height: 100vh;
 }
 
 #butn{
   display: flex;
+  background-color: white;
+  border-radius: 50px;
   align-items: center;
   gap: 20px;
   padding: 20px;
-  width: 17%;
+  width: 10%;
+  height: 5%;
+  margin-top: 10px;
+  margin-left:10px ;
   cursor: pointer;
   transition: ease all 0.5s;
 }
@@ -67,6 +73,7 @@ hr{
 #info-separator{
     display: flex;
     justify-content: space-between;
+
 }
 
 #info-separator2{
@@ -93,9 +100,14 @@ hr{
 
 #people{
     background-color: white;
+    overflow: auto;
     border-radius: 15px;
     padding: 15px 0 0 10px;
-    height: 100%;
+    height: 83%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #label-people{
@@ -104,9 +116,21 @@ hr{
 
 #contact-people{
     display: flex;
+    width: 90%;
     align-items: center;
-    padding-bottom: 5px;
+    justify-content: center;
+    /* padding-bottom: 5px; */
     gap: 20px;
+    /* background-color: rgb(185, 183, 183); */
+    padding: 10px;
+    border-radius: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: all ease 0.5s;
+    box-shadow: 1px 1px 1px black;
+}
+#contact-people:hover{
+  background-color: rgba(185, 183, 183, 0.493);
 }
 
 #message{
@@ -115,8 +139,10 @@ hr{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
+    height: 98vh;
     width: 100%;
+    position: relative;
+    bottom: 85px;
 
 }
 
@@ -136,37 +162,43 @@ nav{
     display: flex;
 }
 
-#separator2{
-    display: flex;
-    gap: 25px;
-}
+
 
 #chatbox{
-    position: relative;
-    height: 68vh;
-    padding: 30px 30px 0 30px;
+    min-height: 0vh;
+    display: flex;
+    flex-direction: column;
+    /* background-color: pink; */
+    padding: 10px;
 }
 
-#my-message{
-    background-color: #131B2B;
-    border-radius: 10px;
-    display: flex;
-    justify-content: end;
-    width: fit-content;
-    color: white;
-    text-align: right;
-    padding: 5px 10px 0 10px;
-    margin-bottom: 10px;
+.my-message{
+  background-color: #131B2B;
+  border-radius: 10px;
+  display: inline-flex;
+  justify-content: flex-end;
+  color: white;
+  text-align: left;
+  width: fit-content;
+  max-width: 70%; /* Limita a largura da mensagem */
+  margin-bottom: 10px;
+  margin-left: auto;      /* Alinha à direita */
+  padding: 10px;
+  margin-right: 5%;
 }
 
-#other-message{
-    background-color: #D9D9D9;
-    border-radius: 10px;
-    width: fit-content;
-    display: flex;
-    padding: 5px 10px 0 10px;
-    margin-bottom: 10px;
+
+.other-message{
+  background-color: #D9D9D9;
+  border-radius: 10px;
+  width: fit-content;
+  max-width: 70%;
+  margin-left: 5%;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
 }
+
 
 #footer-area{
     background-color: transparent;
@@ -219,4 +251,9 @@ footer #button{
     border: none;
     height: 60px;
     width: 60px;
+    transition: all ease 0.5s;
+}
+
+#button button:hover{
+  background-color: #2860d1ab;
 }
