--- a/src/app/components/telamensagem/telamensagem.component.html
+++ b/src/app/components/telamensagem/telamensagem.component.html
@@ -3,7 +3,7 @@
     <img routerLink="/home-log" src="assets/icons/undo_15093184.png" width="40px">
     <b routerLink="/home-log">Voltar</b>
   </div>
-  <div id="all-content">
+  <div id="all-content" *ngFor="let item of user.contatos">
 
     <div id="left">
 
@@ -13,7 +13,7 @@
             <label for="people"><b>People</b></label>
         </div>
 
-        <div id="contact-people">
+        <div id="contact-people" (click)="contatoSelect(item.contato.nomeUsuario)">
           <div id="contact">
               <img src="assets/icons/account_2040484.png" alt="user" height="30px">
           </div>
@@ -21,8 +21,8 @@
           <div id="info">
 
             <div id="info-separator">
-              <div id="name">
-                  Name of User
+              <div id="name" style="padding-bottom: 5px;margin-top: 5px;">
+                  {{item.contato.nomeUsuario}}
               </div>
               <div id="time">
                   <time datetime="">12:12</time>
@@ -34,11 +34,9 @@
                 <div id="msg-ntfy-MSG">
                     <h5>msg</h5>
                 </div>
-                <div id="msg-ntfy-NTFY">
-                    1
-                </div>
+
               </div>
-            </div><hr>
+            </div>
 
           </div>
 
@@ -48,52 +46,31 @@
 
     </div>
 
-    <div id="message">
-      <nav>
+    <div id="message" >
+      <nav style="margin-bottom: 10px;" *ngIf="contatoSelecionado == item.contato.nomeUsuario && selecionado">
 
         <div id="separator">
           <img src="assets/icons/account_2040484.png" alt="" height="45px">
 
           <div id="name-status">
-            <label for="img">User</label>
+            <label for="img" style="font-size: 1.5rem;">{{item.contato.nomeUsuario}}</label>
             <h5>status</h5>
           </div>
 
         </div>
 
-        <div id="separator2">
-          <a href="#"><img src="assets/icons/telephone.png" alt="Call" height="25px"></a>
-          <a href="#"><img src="assets/icons/video-camera.png" alt="Camera" height="25px"></a>
-          <a href="#"><img src="assets/icons/more-information.png" alt="..." height="25px"></a>
-        </div>
-
       </nav>
 
-      <main style="overflow: auto;">
+      <main style="overflow: auto;" >
 
-        <div id="chatbox">
-          <div id="other-message">
-              <p>Hi<br><span>12:12</span></p>
+        <div id="chatbox" *ngIf="contatoSelecionado == item.contato.nomeUsuario">
+          <div class="other-message" *ngFor="let men of user.mensagensRecebidas" >
+              <p>{{men.conteudo}}</p>
+              <span>12:00</span>
           </div>
 
-          <div id="my-message">
-              <p>Hello<br><span>12:12</span></p>
-          </div>
-
-          <div id="other-message">
-              <p>How are you?<br><span>12:12</span></p>
-          </div>
-
-          <div id="my-message">
-              <p>I'm fine and you, how are you?<br><span>12:12</span></p>
-          </div>
-
-          <div id="other-message">
-              <p>I'm doig well, can we meet tomorrow?<br><span>12:12</span></p>
-          </div>
-
-          <div id="my-message">
-              <p>Yes, sure!<br><span>12:12</span></p>
+          <div class="my-message" *ngFor="let men of user.mensagensEnviadas">
+              <p>{{men.conteudo}}<br><span>12:12</span></p>
           </div>
 
         </div>
@@ -106,20 +83,11 @@
           <div id="text-container">
 
             <input type="text" placeholder="Type your mensage here..." style="overflow-wrap: break-word;">
-            <div id="imgs">
-
-              <div id="annex-container">
-                  <img src="assets/icons/appendix.png" alt="anexo" height="25px">
-              </div>
-
-              <div id="emoji-container">
-                  <img src="assets/icons/happy.png" alt="e" height="25px">
-              </div>
-            </div>
+            <!--  -->
 
           </div>
           <div id="button">
-              <button type="button"><img src="assets/icons/mic.png" alt="" height="35px"></button>
+              <button type="button"><img src="assets/icons/1373410.png" alt="" height="35px"></button>
           </div>
 
         </div>
