--- a/src/app/components/header-log/header-log.component.html
+++ b/src/app/components/header-log/header-log.component.html
@@ -1,8 +1,10 @@
 <header>
-  <img src="assets/Images/Prancheta 1.png" alt="" width="250px">
+  <div id="ima">
+    <img src="assets/Images/Prancheta 1.png" alt="" width="100%">
+  </div>
 
   <div id="content">
-    <img id="fo" routerLink="/noti" style="margin-top: 10px;cursor: pointer;" src="assets/icons/sinobranco.png" width="35px" height="35px">
+    <img id="fo" routerLink="/noti" style="margin-top: 10px;cursor: pointer;" src="assets/icons/3239958.png" width="35px" height="35px">
 
     <div id="user-content" (click)="toggleMenu()">
       <p>Usuario</p>
