--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -31,11 +31,9 @@
             <img src="" width="70px"><p>Chat Com Inteligência Artificial</p>
           </div>
           <div class="btns">
-            <img src="" width="70px"><p>Preciso De Ajuda</p>
+            <img src="" width="70px"><p>Preciso De Ajuda ou Reportar Algo</p>
           </div>
-          <div class="btns">
-            <img src="" width="70px"><p>Reportar Algo</p>
-          </div>
+          
 
         </div>
 
