--- a/src/app/components/header-log/header-log.component.css
+++ b/src/app/components/header-log/header-log.component.css
@@ -1,16 +1,25 @@
 header{
   width: 100%;
-  height: 11vh;
-  background-color: #131B2B;
+  height: 12vh;
+  background-color: #e8eaee;
   display: flex;
   justify-content: space-between;
-  color: aliceblue;
+  color: black;
   align-items: center;
+}
+#ima{
+  width: 250px;
+  background-color: #131B2B;
+  border-radius: 20px;
+  height: 90%;
+  display: flex;
+  justify-content: center;
+  margin-left: 2%;
 }
 #user-icon{
   width: 50px;
   height: 50px;
-  background-color: aliceblue;
+  background-color: #131B2B;
   border-radius: 100px;
 }
 #user-content{
@@ -23,7 +32,7 @@ header{
   transition: ease all 0.5s;
 }
 #user-content:hover{
-  background-color:rgba(240, 248, 255, 0.692);
+  background-color:rgba(106, 137, 165, 0.692);
   cursor: pointer;
 }
 #content{
@@ -35,7 +44,7 @@ header{
 }
 #fo:hover{
   border-radius: 100%;
-  background-color: rgba(240, 248, 255, 0.692);
+  background-color:rgba(106, 137, 165, 0.692);
   padding: 6px;
 }
 
