Melhorias e adicao das dados da conta no menu

--- a/src/app/components/header-log/header-log.component.html
+++ b/src/app/components/header-log/header-log.component.html
@@ -13,8 +13,7 @@
 
     <!-- Menu Dropdown -->
     <div id="dropdown-menu" *ngIf="isMenuOpen">
-      <a href="#">Dados Da Conta</a>
-      <a href="#">Configurações</a>
+      <a href="/conta">Dados Da Conta</a>
       <a href="#">Sair</a>
     </div>
 
