adicao da pagina com IA

--- a/src/app/pagina/home-log/home-log.component.html
+++ b/src/app/pagina/home-log/home-log.component.html
@@ -27,13 +27,13 @@
             <img src="assets/icons/text_2878671.png" width="70px"><p>Histórico de Processos</p>
           </div>
 
-          <div class="btns">
+          <div class="btns" routerLink="/chatIa">
             <img src="" width="70px"><p>Chat Com Inteligência Artificial</p>
           </div>
           <div class="btns">
             <img src="" width="70px"><p>Preciso De Ajuda ou Reportar Algo</p>
           </div>
-          
+
 
         </div>
 
