adicao home mediadores

--- a/src/app/pagina/chatcomia/chatcomia.component.html
+++ b/src/app/pagina/chatcomia/chatcomia.component.html
@@ -14,7 +14,7 @@
     </aside>
     <div class="chat-container">
       <div class="chat-header">
-        <p>Atenção este chat é uma estimativa se seu caso poderá seguir ou não, <br>
+        <p>Atenção este chat irá fornecer uma estimativa se seu caso poderá seguir ou não, <br>
         a escolha final é totalmente Sua</p>
       </div>
 
